<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFFFFFF"
    tools:context=".MainActivity">


    <RadioGroup
        android:id="@+id/cuisine"
        android:layout_width="270dp"
        android:layout_height="318dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639">

        android:layout_width="412dp"
        android:layout_height="176dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394"

        <RadioButton
            android:id="@+id/Veg"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="126dp"
            android:layout_height="99dp"
            android:button="@android:drawable/btn_radio"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:text="@string/Veg"
            android:textColor="#35C518"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.439"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.356" />

        <RadioButton
            android:id="@+id/Non_veg"
            android:layout_width="188dp"
            android:layout_height="98dp"
            android:button="@android:drawable/btn_radio"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:text="@string/Non_veg"
            android:textAllCaps="false"
            android:textColor="#EC0909"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.559"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.477" />

        <RadioButton
            android:id="@+id/both"
            android:layout_width="133dp"
            android:layout_height="113dp"
            android:button="@android:drawable/btn_radio"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:text="@string/Both"
            android:textColor="#FFC107"
            android:textSize="24sp" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="239dp"
        android:layout_height="91dp"
        android:layout_gravity="center"
        android:background="@drawable/co"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="467dp"
        android:layout_height="121dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/good" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="89dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.906"
        app:srcCompat="@drawable/next" />


</androidx.constraintlayout.widget.ConstraintLayout>